--- a/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/CMakeLists.txt
@@ -237,12 +237,12 @@ install(
 
 # Download yolov2-tiny.weights
 set(PATH "${CMAKE_CURRENT_SOURCE_DIR}/yolo_network_config/weights")
-set(FILE "${PATH}/yolov2-tiny.weights")
-message(STATUS "Checking and downloading yolov2-tiny.weights if needed ...")
-if (NOT EXISTS "${FILE}")
-  message(STATUS "... file does not exist. Downloading now ...")
-  execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2-tiny.weights -P ${PATH})
-endif()
+#set(FILE "${PATH}/yolov2-tiny.weights")
+#message(STATUS "Checking and downloading yolov2-tiny.weights if needed ...")
+#if (NOT EXISTS "${FILE}")
+#  message(STATUS "... file does not exist. Downloading now ...")
+#  execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2-tiny.weights -P ${PATH})
+#endif()
 
 # Download yolov3.weights
 set(FILE "${PATH}/yolov3.weights")
@@ -259,12 +259,12 @@ endif()
 if(CATKIN_ENABLE_TESTING)
   # Download yolov2.weights
   set(PATH "${CMAKE_CURRENT_SOURCE_DIR}/yolo_network_config/weights")
-  set(FILE "${PATH}/yolov2.weights")
-  message(STATUS "Checking and downloading yolov2.weights if needed ...")
-  if (NOT EXISTS "${FILE}")
-    message(STATUS "... file does not exist. Downloading now ...")
-    execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2.weights -P ${PATH})
-  endif()
+#  set(FILE "${PATH}/yolov2.weights")
+#  message(STATUS "Checking and downloading yolov2.weights if needed ...")
+#  if (NOT EXISTS "${FILE}")
+#    message(STATUS "... file does not exist. Downloading now ...")
+#    execute_process(COMMAND wget http://pjreddie.com/media/files/yolov2.weights -P ${PATH})
+#  endif()
 
   find_package(rostest REQUIRED)
 
